# ChrTrcProfiler

./: CMakeLists.txt  CMakeSettings.json  README.md
include/: ChrTrc.h  ChrTrcCompileTimeString.h  ChrTrcMacros.h  ChrTrcProfiler.h
ipp_src/: ChrTrcProfiler.ipp
src/: ChrTrcProfiler.cpp  main.cpp
